# FantasyTactics

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Doxyfile  PROMPTS.md  README.md  install.js  install.py  package.json
.codex/agents/: engine-architect.toml  gameplay-system-designer.toml  shader-author.toml
.codex/skills/design-ecs-feature/: SKILL.md
.codex/skills/implement-scene-feature/: SKILL.md
.codex/skills/write-opengl-shader/: SKILL.md
.specify/memory/: constitution.md
.specify/templates/commands/: placeholder.md
assets/animations/low-poly-character/: attack.glb  death.glb  idle.glb  run.glb  walking.glb
docs/: CHANGELOG.md
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_000013_000008.html  dir_000015_000008.html  dir_000015_000013.html  dir_007ad4948e580287e9d3cd339e78f152.html  dir_007ad4948e580287e9d3cd339e78f152_dep.dot  dir_08cec4c655d37361da453b6dde918433.html  dir_08cec4c655d37361da453b6dde918433_dep.dot  dir_22ca0181e2dd81a8a004b3d840027675.html  dir_22ca0181e2dd81a8a004b3d840027675.js  dir_22ca0181e2dd81a8a004b3d840027675_dep.dot  dir_295571dfb7c16068f814d7b84f22964d.html  dir_295571dfb7c16068f814d7b84f22964d.js  dir_295571dfb7c16068f814d7b84f22964d_dep.dot  dir_37c6514aeece95293041e34c0f2e0784.html  dir_37c6514aeece95293041e34c0f2e0784_dep.dot  dir_3adfb512bd1dae405aa37381e893a373.html  dir_3adfb512bd1dae405aa37381e893a373.js  dir_3adfb512bd1dae405aa37381e893a373_dep.dot  dir_3d9126aa00c041bc0b8f859d1965a0f4.html  dir_3d9126aa00c041bc0b8f859d1965a0f4.js  dir_3d9126aa00c041bc0b8f859d1965a0f4_dep.dot  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4b09dce13d457a0de03a73db1f36f47a.html  dir_4b09dce13d457a0de03a73db1f36f47a.js  dir_4b09dce13d457a0de03a73db1f36f47a_dep.dot  dir_538f2cc728413b738dd8bc79cdfaa762.html  dir_538f2cc728413b738dd8bc79cdfaa762.js  dir_538f2cc728413b738dd8bc79cdfaa762_dep.dot  dir_560415a5d2bc4999842279f4fc1debef.html  dir_560415a5d2bc4999842279f4fc1debef.js  dir_560415a5d2bc4999842279f4fc1debef_dep.dot  dir_5e835386694ce392648cfcf102577fe3.html  dir_5e835386694ce392648cfcf102577fe3.js  dir_5e835386694ce392648cfcf102577fe3_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_7b5d38f1875f1b693f62ca6a108a1129.html  (+51 more)
docs/html/d0/d06/: _first_person_camera_8cpp.html
docs/html/d0/d42/: _application_8cpp.html
docs/html/d0/d4f/: _texture2_d_8cpp__incl.dot
docs/html/d0/d55/: class_menu_scene-members.html
docs/html/d0/d5f/: _scene_manager_8cpp.html
docs/html/d0/d69/: class_text_renderer-members.html
docs/html/d0/d88/: class_circle.html  class_circle.js  class_f_p_s_camera.html
docs/html/d0/d94/: _isometric_camera_8h__dep__incl.dot
docs/html/search/: all_10.js  all_12.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  (+27 more)
engine/: CMakeLists.txt
engine/resources/shaders/: basic.vert  bulb.frag  cel_shading.frag  cel_shading.vert  cel_shading_texture.frag  color_ui.frag  color_ui.vert  cube.frag  default.frag  default.vert  skinned.vert  sky.frag  sky.vert  text.frag  text.vert  ui.frag  ui.vert
engine/src/: OpenGLInclude.h
engine/src/core/: Application.cpp  Application.h  Gamepad.h  Input.cpp  Input.h  Keyboard.h  Mouse.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Window.cpp  Window.h
engine/src/ecs/: AnimationSystem.cpp  AnimationSystem.h  Components.h  EntityComponentSystem.cpp  EntityComponentSystem.h  GameObject.cpp  GameObject.h  ISystem.h  MeshRenderSystem.cpp  MeshRenderSystem.h  UISystem.cpp  UISystem.h
engine/src/graphics/animation/: AnimationClip.cpp  AnimationClip.h  Animator.cpp  Animator.h
engine/src/graphics/cameras/: Camera.cpp  Camera.h  FirstPersonCamera.cpp  FirstPersonCamera.h  IsometricCamera.cpp  IsometricCamera.h  OrbitCamera.cpp  OrbitCamera.h
engine/src/graphics/meshes/: Circle.cpp  Circle.h  Cube.cpp  Cube.h  Ellipsoid.cpp  Ellipsoid.h  Mesh.cpp  Mesh.h  Quad.cpp  Quad.h  SkinnedMesh.cpp  SkinnedMesh.h  Sphere.cpp  Sphere.h
engine/src/graphics/renderers/: ShaderProgram.cpp  ShaderProgram.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h
engine/src/graphics/ui/: Quad2D.cpp  Quad2D.h
engine/src/math/: Color.h  Math.h  Vector.h  Vector2.h  Vector3.h
engine/src/utilities/: Logger.cpp  Logger.h  UUIDGenerator.cpp  UUIDGenerator.h
game/: CMakeLists.txt
game/src/: Game.cpp  main.cpp
game/src/scenes/: MenuScene.cpp  MenuScene.h  MeshScene.cpp  MeshScene.h  PlayScene.cpp  PlayScene.h  TestScene.cpp  TestScene.h
game/src/systems/: DebugTransformSystem.cpp  DebugTransformSystem.h  GridMovementSystem.cpp  GridMovementSystem.h  TurnControlSystem.cpp  TurnControlSystem.h
src/: Game.h  glad.c  main.cpp  shaderProgram.cpp  shaderProgram.h
src/assets/shaders/: default.frag  default.vert
src/graphics/: Camera.cpp  Camera.h  Circle.cpp  Circle.h  Cube.cpp  Cube.h  FPSCamera.cpp  FPSCamera.h  IsometricCamera.cpp  IsometricCamera.h  Mesh.cpp  Mesh.h  OrbitCamera.cpp  OrbitCamera.h  Shader.cpp  Shader.h  Sphere.cpp  Sphere.h  Texture2D.cpp  Texture2D.h  shader.cpp  shader.h  texture_2d.cpp  texture_2d.h
src/graphics/cameras/: Camera.cpp  Camera.h  FPSCamera.cpp  FPSCamera.h  FirstPersonCamera.h  IsometricCamera.cpp  IsometricCamera.h  OrbitCamera.cpp  OrbitCamera.h
src/graphics/meshes/: Circle.cpp  Cube.cpp  Cube.h  Ellipsoid.cpp  Mesh.cpp  Mesh.h  Sphere.cpp  Sphere.h
src/graphics/renderers/: ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h
src/resources/shaders/: basic.frag  bulb.vert  cel_shading_texture.frag  cube.vert  default.vert  triangle.vert  ui.frag
src/utilities/: Logger.cpp  Logger.h  logger.cpp  logger.h
(+211 files in other folders)
